# gmarrpopranker

./: .gitignore  BLOG_CRM_GUIDE.md  COMPLETE_APP_GUIDE.md  DEBUG_METHOD_NOT_ALLOWED.md  NO_LOGS_DEBUG.md  QUICKSTART.md  README.md  SIMPLE_CRM_TEST.md  main.py  pyproject.toml  requirements.txt  startup_check.py
app/data/: app.db
app/models/: models.py
app/routers/: auth.py  items.py
app/static/: style.css
app/templates/: blog.html  blog_post.html  crm_blog.html  crm_landing.html  crm_library.html  crm_simple.html  crm_tmdb.html  crm_top.html  index.html  top.html
